<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainStudentActivity">


    <Button
        android:id="@+id/main_acces_gameroom"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="281dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/acces_game_room"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/main_score"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="286dp"
        android:layout_marginBottom="147dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/note_list"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="119dp" />

    <Switch
        android:id="@+id/main_switch_login"
        android:layout_width="108dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="29dp"
        android:scrollbarSize="@android:dimen/notification_large_icon_height"
        android:text="@string/log_out"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/holo_red_dark"
        android:textOff="@string/disconnected"
        android:textOn="@string/connected"
        android:textStyle="bold" />
</RelativeLayout>