<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".TestPageActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="84dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:text="@string/puncte"
        android:textColor="@android:color/black"
        android:textSize="17dp"
        tools:layout_editor_absoluteX="243dp"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="355dp"
        android:layout_height="29dp"
        android:layout_above="@+id/button8"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="276dp"
        android:text="@string/you_ve_finished_the_test"
        android:textAlignment="center"
        android:textColor="@color/login_passwd_hint_color"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="84dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/puncte"
        android:textColor="@android:color/black"
        android:textSize="17dp"
        tools:layout_editor_absoluteX="243dp"
        tools:layout_editor_absoluteY="224dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/feedback"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="373dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="1dp"
        android:text="@string/score"
        android:textColor="@android:color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="221dp"
        android:text="@string/passing_score"
        android:textColor="@android:color/black"
        android:textSize="17dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginLeft="1dp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/_80"
        android:textColor="@android:color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/passing_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignEnd="@+id/score"
        android:text="@string/_50"
        android:textColor="@android:color/black"
        android:textSize="17dp"
        android:layout_alignRight="@+id/score" />

</RelativeLayout>