<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".AccesGameActivity">



    <android.support.design.widget.TextInputEditText
        android:id="@+id/acces_game_code"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:hint="@string/code_acces"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/acces_game_nickname"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acces_game_code"
        android:layout_alignStart="@+id/acces_game_code"
        android:layout_alignLeft="@+id/acces_game_code"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="81dp"
        android:hint="@string/nickname"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/acces_button_open"
        android:layout_width="113dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/enter"
        android:textSize="20dp" />


</RelativeLayout>